# Cerebra

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  DEVELOPMENT.md  README.md  dev.sh  package-lock.json  vercel.json
api/: .env.example  index.py  pyproject.toml  requirements.txt
api/app/: __init__.py  concept_service.py  config.py  dashboard_service.py  db.py  enums.py  graph_service.py  ingest_service.py  initdb.py  main.py  models.py  preferences_service.py  projections.py  review_service.py  scheduler.py  schemas.py  scoring.py  seed.py
api/app/routers/: concepts.py  dashboard.py  graph.py  health.py  ingest.py  metrics.py  preferences.py  review.py  subjects.py
api/tests/: conftest.py  test_api.py  test_concept_api.py  test_concept_service.py  test_dashboard_service.py  test_graph.py  test_graph_api.py  test_ingest_api.py  test_ingest_service.py  test_pipeline.py  test_preferences.py  test_preferences_api.py  test_projections.py  test_review.py  test_review_api.py  test_scheduler.py  test_scoring.py  test_seed.py  test_snapshots.py
mcp/: README.md  cerebra_mcp.py  deep-learn-integration.md  requirements.txt
prototypes/: Cerebra Analysis.dc.html  Cerebra Concept Page Frontend Spec.dc.html  Cerebra Concept Page.dc.html  Cerebra Dashboard Frontend Spec.dc.html  Cerebra Dashboard.dc.html  Cerebra Data Architecture.dc.html  Cerebra Foundations.dc.html  Cerebra Graph Frontend Spec.dc.html  Cerebra Graph States.dc.html  Cerebra Index.dc.html  Cerebra Knowledge Graph.dc.html  Cerebra Polish Frontend Spec.dc.html  Cerebra Prototype.dc.html  Cerebra Review Frontend Spec.dc.html  Cerebra UI Wireframes.dc.html
specs/: agent-rules.md  architecture.md  concept-page-frontend.md  dashboard-frontend.md  data-architecture.md  design-system.md  foundations.md  product.md  (+5 more)
(+80 files in other folders)
