[project]
name = "cerebra-api"
version = "0.1.0"
description = "Cerebra backend — event-sourced learning OS data spine"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "alembic>=1.13",
  # Postgres driver. Kept as a base dep (not an extra) so Vercel's uv build —
  # which installs only the default dependency group from uv.lock — ships it to
  # the serverless function. Dev/test still default to the stdlib sqlite driver.
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning:app.*"]
